AI Improvement (fallback) Refactor BranchEvolutionManager for better readability and performance: simplified file reading/writing and improved exception handling. AI Improvement (fallback) Refactor GitHubIssueManager: Improved error handling, added validation for issue parameters, and optimized logging. Refactor GitManager: Improved error handling, added method documentation, and optimized Git command logic for readability and robustness.